Fixes white space under image

--- a/src/styles/sections/glide.css
+++ b/src/styles/sections/glide.css
@@ -67,6 +67,7 @@
 .glide__slide-image {
   width: 100%;
   height: 100%;
+  display: block;
 }
 
 .glide__arrow {
